--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,10 +1,11 @@
 .Footer{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border: 1px solid black;
+    font-size: 1.2rem;
     padding: 10px;
-    margin: 5px;
-}
-
-.Footer{
+    background-color: #E1EDE6;
+    width: 100%;
+    height: 20vh;
     grid-area: f;
+    bottom: 0;
+    text-align: center;
 }
