--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,7 +1,8 @@
 .Header{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border: 1px solid black;
-    padding: 10px;
-    margin: 5px;
+    padding: 20px;
     grid-area: h;
+    background-color: #E1EDE6;
+    width: 100%;
+    height: 20vh;
 }
