--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -5,4 +5,25 @@
     background-color: #E1EDE6;
     width: 100%;
     height: 20vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.logo{
+    margin-right: 2%;
+}
+
+.nav{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-decoration: none;
+    margin-right: 5%; 
+}
+
+.li {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    justify-self: flex-start;
+    list-style: none; 
+    text-decoration: none;
+    display: inline;
+    margin-right: 5%; 
 }
