--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,28 +1,37 @@
 .Main{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 10px;
-    height: 100%;
+    height: 500px;
     text-align: center;
+    background-color: #f8f8f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
 }
+
 
 .container-card{
     display: flex;
     flex-direction: row;
     border: 1px solid black;
-    height: 100% ;
-    width: 100%;
+    height: 400px ;
+    width: 600px;
     min-width: 50%;
     display: flex;
     justify-content: center;
+    justify-self: center;
     padding: 4% 0 4% 0;
     background-color: #f8f8f5;
 }
 
 .component-card{
     text-align: center;
+    border-radius: 5%;
     border: 1px solid black;
     margin: 2%;
-    width: 500px;
+    width: 400px;
     height: 200px;
 }
 
@@ -33,7 +42,6 @@
     width: 40px;
     height: 40px;
     margin-left: 2px;
-
 }
 
 .button-previous{
@@ -42,5 +50,38 @@
     color: white;
     width: 40px;
     height: 40px;
+}
 
+.container-list{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    height: 400px ;
+    width: 600px;
+    min-width: 50%;
+    display: flex;
+    justify-content: center;
+    padding: 4% 0 4% 0;
+    background-color: #f8f8f5;
+}
+
+.myWordsList{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    height: 400px ;
+    width: 600px;
+    min-width: 50%;
+    display: flex;
+    justify-content: center;
+    padding: 4% 0 4% 0;
+    background-color: #f8f8f5;
+}
+
+.button-saved-words{
+    background-color: #86928B;
+    border-radius: 50%;
+    color: white;
+    width: 30px;
+    height: 30px;
 }
